2.0.0
-----

Initial version using the Meson build system and containing:
  - BMP image provider
  - FFmpeg image provider, music provider and video provider
  - FreeType2 font provider
  - GStreamer video provider
  - JPEG image provider
  - LodePNG image provider
  - MAD music provider
  - MNG video provider
  - PNG image provider
  - Schrift font provider
  - STB font provider and image provider
  - TIFF image provider
  - Vorbis music provider
  - WebP image provider
  - YUV image provider